# pico-stanta

./: .gitignore  CMakeLists.txt  README.md  SETUP.md  brick.aseprite  build-pico.sh  build-quick.bat  build-web.bat  build.bat  build.sh  chicken.aseprite  emscripten-shell.html  game.cpp  metadata.yml  run-web.bat  setup.bat
.claude/: settings.local.json
.github/workflows/: static.yml
assets/: gem.aseprite
src/: city.cpp  city.hpp  game.cpp  rasterizer.cpp  rasterizer.hpp  render3d.cpp  render3d.hpp
